<resources>
    <string name="app_name">Mini Stockbit App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_splash">Stockbit</string>
    <string name="text_in">Masuk</string>
    <string name="text_in_google">Masuk dengan Google</string>
    <string name="text_in_fb">Masuk dengan Facebook</string>
    <string name="text_in_or">Atau</string>
    <string name="text_in_hint_username">Username or Email</string>
    <string name="text_in_hint_psw">Password</string>
    <string name="text_in_hint_forgot_psw">Lupa Password</string>
    <string name="text_in_btn">Login</string>
    <string name="text_in_ask_link">Belum punya akun?</string>
    <string name="text_in_sign_up">Daftar sekarang</string>

    <string name="text_home_drop_down">All Watchlist</string>
    <string name="text_home_add">Add Symbol</string>
    <string name="text_home_name">ADRO</string>
    <string name="text_home_full_name">Adaro Energy Tbk.</string>
    <string name="text_home_watchlist">Watchlist</string>
    <string name="text_home_stream">Stream</string>
    <string name="text_home_search">Search</string>
    <string name="text_home_chat">Chat</string>
    <string name="text_home_porto">Portofolio</string>

    <string name="text_item_name">ADRO</string>
    <string name="text_item_full">Adaro Energy Tbk.</string>
    <string name="text_item_price">1,245</string>
    <string name="text_item_profit">+100 (+1.19%)</string>

    <string name="text_string"></string>
</resources>